fix: hide tile list meta on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -264,6 +264,7 @@ h1{
     font-family: var(--font-family-mono);
     text-transform: uppercase;
     font-size: .8rem;
+    display: none;
   }
 }
 
@@ -280,5 +281,11 @@ h1{
 
   html{
     font-size: 16px;
+  }
+
+  .tile-list{
+    .meta{
+      display: inline-block;
+    }
   }
 }
